--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
  
 
                 <div class="user-nav__user-box">
-                    <img src="/img/user.jpg" alt="user photo" class="user-nav__user-photo"></img>
+                    <img src="./img/user.jpg" alt="user photo" class="user-nav__user-photo"></img>
                     <span class="user-nav__user-name">&#160;&#160;Peter </span> 
                 </div>
 
@@ -104,8 +104,8 @@
                             Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate. </p>
                         
                             <div class="gallary">
-                                <img src="/img/pic2.jpg" alt="" class="gallary__img">
-                                <img src="/img/pic3.jpg" alt="" class="gallary__img">
+                                <img src="./img/pic2.jpg" alt="" class="gallary__img">
+                                <img src="./img/pic3.jpg" alt="" class="gallary__img">
                             </div>
 
                         <p class="p1">Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate delectus, inventore  quas, ut corporis incidunt deserunt quae architecto voluptate delectus, inventoreiure aliquid aliquam.</p>
@@ -122,19 +122,19 @@
                             <li class="featureitem">Budget: $ 20 million+ </li>
                         </ul>
                         <div class="gallary">
-                            <img src="/img/pic1.jpg" alt="" class="gallary__img">
-                            <img src="/img/pic4.jpg" alt="" class="gallary__img">
+                            <img src="./img/pic1.jpg" alt="" class="gallary__img">
+                            <img src="./img/pic4.jpg" alt="" class="gallary__img">
                         </div>
                     </div><div class="user-review">
                         <div class="recommend">
                             <P class="p2">
-                               4 friends recommend this movies
+                               4 friends recommend this movie
                             </P>
                             <div class="recommend__users">
-                                <img src="/img/user-3.jpg" class="recommend__photo"></img>
-                                <img src="/img/user-4.jpg" class="recommend__photo"></img>
-                                <img src="/img/user-7.jpg" class="recommend__photo"></img>
-                                <img src="/img/user-6.jpg" class="recommend__photo"></img>
+                                <img src="./img/user-3.jpg" class="recommend__photo"></img>
+                                <img src="./img/user-4.jpg" class="recommend__photo"></img>
+                                <img src="./img/user-7.jpg" class="recommend__photo"></img>
+                                <img src="./img/user-6.jpg" class="recommend__photo"></img>
         
                             </div>
                         </div>
@@ -143,7 +143,7 @@
                             <p class="review__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta animi, totam, itaque officia ex.
                             </p>
                             <div class="review__user-box">
-                                <img src="/img/user-1.jpg" alt="user 7" class="review__user-photo">
+                                <img src="./img/user-1.jpg" alt="user 7" class="review__user-photo">
                                 <div class="review__user-name-box">
                                     <span class="review__user-name">Jack Wong</span>
                                     <span class="review__date">03 May 2021</span>
@@ -156,7 +156,7 @@
                             <p class="review__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta animi, totam, itaque officia ex.
                             </p>
                             <div class="review__user-box">
-                                <img src="/img/user-3.jpg" alt="user 7" class="review__user-photo">
+                                <img src="./img/user-3.jpg" alt="user 7" class="review__user-photo">
                                 <div class="review__user-name-box">
                                     <span class="review__user-name">Richard Mark</span>
                                     <span class="review__date">02 May 2021</span>
